feat: add spot market institutional and credit data
